updated landing page

--- a/webclient/src/custom.scss
+++ b/webclient/src/custom.scss
@@ -1,5 +1,17 @@
-// Override default variables before the import
+// Override default background color for body
 // $body-bg: #000;
+
+// Override default h1 font size
+//$h1-font-size: 36px;
+
+$font-size-base: 1.1rem;
+
+// Override default font family
+// $font-family-base: "Open Sans", sans-serif !important;
+$font-family-base: "Spectral";
+
+$dark: #00042c;
+//$light: #e5e5e5;
 
 // Import Bootstrap and its default variables
 @import "~bootstrap/scss/bootstrap.scss";
