--- a/webclient/src/custom.scss
+++ b/webclient/src/custom.scss
@@ -10,7 +10,7 @@ $font-family-base: "Spectral";
 // $secondary: #6c757d;
 // $success: #198754;
 // $info: #0dcaf0;
-// $warning: #ffc107;
+$warning: #ffb78e;
 // $danger: #dc3545;
 // $light: #f8f9fa;
 // $dark: #212529;
