--- a/webclient/src/custom.scss
+++ b/webclient/src/custom.scss
@@ -2,12 +2,12 @@
 // $enable-gradients: true;
 
 // Default & New variables (fonts & colors)
-$font-size-base: 0.85rem;
-$font-family-base: "Spectral";
+//$font-size-base: 0.85rem;
+$font-family-base: "Inter", sans-serif;
 
 // First override some or all individual color variables
 // $primary: #fdb90d;
-// $secondary: #6c757d;
+$secondary: #6c757d;
 // $success: #198754;
 // $info: #0dcaf0;
 $warning: #ffb78e;
@@ -20,12 +20,18 @@ $r-bank-blue: #00042c;
 $r-bank-black: #000;
 $r-bank-silver: #bbb;
 $r-bank-white: #fff;
+$r-bank-grayscale-platin: #efefee;
+$r-bank-grayscale-titanium: #e5e4e2;
+$r-bank-grayscale-iron: #92918f;
 
 $custom-colors: (
   "r-bank-blue": $r-bank-blue,
   "r-bank-black": $r-bank-black,
   "r-bank-silver": $r-bank-silver,
   "r-bank-white": $r-bank-white,
+  "r-bank-grayscale-platin": $r-bank-grayscale-platin,
+  "r-bank-grayscale-titanium": $r-bank-grayscale-titanium,
+  "r-bank-grayscale-iron": $r-bank-grayscale-iron,
 );
 
 // Helpers import
@@ -57,3 +63,4 @@ $utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");
 
 // Finish
 @import "~bootstrap/scss/bootstrap.scss";
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
