step 1 almost done

--- a/webclient/src/custom.scss
+++ b/webclient/src/custom.scss
@@ -16,6 +16,7 @@ $warning: #ffb78e;
 // $dark: #212529;
 
 // add custom color
+$r-bank-primary: #06232d;
 $r-bank-blue: #00042c;
 $r-bank-black: #000;
 $r-bank-silver: #bbb;
@@ -23,8 +24,10 @@ $r-bank-white: #fff;
 $r-bank-grayscale-platin: #efefee;
 $r-bank-grayscale-titanium: #e5e4e2;
 $r-bank-grayscale-iron: #92918f;
+$r-bank-grayscale-silver: #cac9c7;
 
 $custom-colors: (
+  "r-bank-primary": $r-bank-primary,
   "r-bank-blue": $r-bank-blue,
   "r-bank-black": $r-bank-black,
   "r-bank-silver": $r-bank-silver,
@@ -32,6 +35,7 @@ $custom-colors: (
   "r-bank-grayscale-platin": $r-bank-grayscale-platin,
   "r-bank-grayscale-titanium": $r-bank-grayscale-titanium,
   "r-bank-grayscale-iron": $r-bank-grayscale-iron,
+  "r-bank-grayscale-silver": $r-bank-grayscale-silver,
 );
 
 // Helpers import
