form validation changed | validation icons are outside of input fields

--- a/webclient/src/custom.scss
+++ b/webclient/src/custom.scss
@@ -1,5 +1,6 @@
 // Settings
-// $enable-gradients: true;
+$enable-validation-icons: false;
+
 
 // Default & New variables (fonts & colors)
 //$font-size-base: 0.85rem;
