--- a/webclient/src/custom.scss
+++ b/webclient/src/custom.scss
@@ -1,7 +1,6 @@
 // Settings
 $enable-validation-icons: false;
 
-
 // Default & New variables (fonts & colors)
 //$font-size-base: 0.85rem;
 $font-family-base: "Inter", sans-serif;
@@ -26,6 +25,7 @@ $r-bank-grayscale-platin: #efefee;
 $r-bank-grayscale-titanium: #e5e4e2;
 $r-bank-grayscale-iron: #92918f;
 $r-bank-grayscale-silver: #cac9c7;
+$r-bank-secondary-yellow-green: #bdd62f;
 
 $custom-colors: (
   "r-bank-primary": $r-bank-primary,
@@ -37,6 +37,7 @@ $custom-colors: (
   "r-bank-grayscale-titanium": $r-bank-grayscale-titanium,
   "r-bank-grayscale-iron": $r-bank-grayscale-iron,
   "r-bank-grayscale-silver": $r-bank-grayscale-silver,
+  "r-bank-secondary-yellow-green": $r-bank-secondary-yellow-green,
 );
 
 // Helpers import
