color alignment and flex form validation

--- a/webclient/src/custom.scss
+++ b/webclient/src/custom.scss
@@ -9,34 +9,39 @@ $font-family-base: "Inter", sans-serif;
 // First override some or all individual color variables
 // $primary: #fdb90d;
 $secondary: #6c757d;
-// $success: #198754;
+$success: #87c12f ;
 // $info: #0dcaf0;
-$warning: #ffb78e;
-// $danger: #dc3545;
+// $warning: #ffc107;
+$danger: #ff7425;
 // $light: #f8f9fa;
 // $dark: #212529;
 
 // add custom color
 $r-bank-primary: #06232d;
+$r-bank-highlight: #ffb78e;
+$r-bank-white: #fff;
 $r-bank-blue: #00042c;
 $r-bank-black: #000;
 $r-bank-silver: #bbb;
-$r-bank-white: #fff;
 $r-bank-grayscale-platin: #efefee;
 $r-bank-grayscale-titanium: #e5e4e2;
-$r-bank-grayscale-iron: #92918f;
 $r-bank-grayscale-silver: #cac9c7;
+$r-bank-grayscale-iron: #92918f;
+$r-bank-grayscale-slate: #322F31;
+
 
 $custom-colors: (
   "r-bank-primary": $r-bank-primary,
+  "r-bank-highlight": $r-bank-highlight,
   "r-bank-blue": $r-bank-blue,
   "r-bank-black": $r-bank-black,
   "r-bank-silver": $r-bank-silver,
   "r-bank-white": $r-bank-white,
   "r-bank-grayscale-platin": $r-bank-grayscale-platin,
   "r-bank-grayscale-titanium": $r-bank-grayscale-titanium,
-  "r-bank-grayscale-iron": $r-bank-grayscale-iron,
   "r-bank-grayscale-silver": $r-bank-grayscale-silver,
+  "r-bank-grayscale-iron": $r-bank-grayscale-iron,
+  "r-bank-grayscale-slate": $r-bank-grayscale-slate,
 );
 
 // Helpers import
