updated with portfolio

--- a/webclient/src/custom.scss
+++ b/webclient/src/custom.scss
@@ -8,7 +8,7 @@ $font-family-base: "Inter", sans-serif;
 // First override some or all individual color variables
 // $primary: #fdb90d;
 $secondary: #6c757d;
-$success: #87c12f ;
+$success: #87c12f;
 // $info: #0dcaf0;
 // $warning: #ffc107;
 $danger: #ff7425;
@@ -16,33 +16,33 @@ $danger: #ff7425;
 // $dark: #212529;
 
 // add custom color
-$r-bank-primary: #06232d;
-$r-bank-highlight: #ffb78e;
-$r-bank-white: #fff;
-$r-bank-blue: #00042c;
-$r-bank-black: #000;
-$r-bank-silver: #bbb;
-$r-bank-grayscale-platin: #efefee;
-$r-bank-grayscale-titanium: #e5e4e2;
-$r-bank-grayscale-silver: #cac9c7;
-$r-bank-grayscale-iron: #92918f;
-$r-bank-grayscale-slate: #322F31;
+$no-bank-primary: #06232d;
+$no-bank-highlight: #ffb78e;
+$no-bank-white: #fff;
+$no-bank-blue: #00042c;
+$no-bank-black: #000;
+$no-bank-silver: #bbb;
+$no-bank-grayscale-platin: #efefee;
+$no-bank-grayscale-titanium: #e5e4e2;
+$no-bank-grayscale-silver: #cac9c7;
+$no-bank-grayscale-iron: #92918f;
+$no-bank-grayscale-slate: #322f31;
 
-$r-bank-secondary-yellow-green: #bdd62f;
+$no-bank-secondary-yellow-green: #bdd62f;
 
 $custom-colors: (
-  "r-bank-primary": $r-bank-primary,
-  "r-bank-highlight": $r-bank-highlight,
-  "r-bank-blue": $r-bank-blue,
-  "r-bank-black": $r-bank-black,
-  "r-bank-silver": $r-bank-silver,
-  "r-bank-white": $r-bank-white,
-  "r-bank-grayscale-platin": $r-bank-grayscale-platin,
-  "r-bank-grayscale-titanium": $r-bank-grayscale-titanium,
-  "r-bank-grayscale-silver": $r-bank-grayscale-silver,
-  "r-bank-grayscale-iron": $r-bank-grayscale-iron,
-  "r-bank-grayscale-slate": $r-bank-grayscale-slate,
-  "r-bank-secondary-yellow-green": $r-bank-secondary-yellow-green,
+  "no-bank-primary": $no-bank-primary,
+  "no-bank-highlight": $no-bank-highlight,
+  "no-bank-blue": $no-bank-blue,
+  "no-bank-black": $no-bank-black,
+  "no-bank-silver": $no-bank-silver,
+  "no-bank-white": $no-bank-white,
+  "no-bank-grayscale-platin": $no-bank-grayscale-platin,
+  "no-bank-grayscale-titanium": $no-bank-grayscale-titanium,
+  "no-bank-grayscale-silver": $no-bank-grayscale-silver,
+  "no-bank-grayscale-iron": $no-bank-grayscale-iron,
+  "no-bank-grayscale-slate": $no-bank-grayscale-slate,
+  "no-bank-secondary-yellow-green": $no-bank-secondary-yellow-green,
 );
 
 // Helpers import
