add guardian and friend to protfolio view

--- a/webclient/src/custom.scss
+++ b/webclient/src/custom.scss
@@ -29,6 +29,7 @@ $no-bank-white: #fff;
 $no-bank-blue: #00042c;
 $no-bank-black: #000;
 $no-bank-silver: #bbb;
+$no-bank-hovergrey: #f4f4f4;
 
 $no-bank-grayscale-platin: #efefee;
 $no-bank-grayscale-titanium: #e5e4e2;
@@ -57,6 +58,7 @@ $custom-colors: (
   "no-bank-secondary-yellow-green": $no-bank-secondary-yellow-green,
   "no-bank-secondary-lemon": $no-bank-secondary-lemon,
   "no-bank-secondary-turquoise-green": $no-bank-secondary-turquoise-green,
+  "no-bank-hovergrey": $no-bank-hovergrey,
 );
 
 .font-sm {
