Feature/portofolio upgrade (#20)
* show first 3 holding token, refactoring

* change noGold token category to stablecoin

* small bug fix at top3 positions

* add guardian and friend to protfolio view

* funding sources draft

* show ONE info at record & token page

* remove duplicated import

* fundingSources draft2 in portfolio view

Co-authored-by: Junta <junta8918@gmail.com>
Co-authored-by: kovacs-github <tamas.kovacs@sptech.ch>

--- a/webclient/src/custom.scss
+++ b/webclient/src/custom.scss
@@ -29,6 +29,7 @@ $no-bank-white: #fff;
 $no-bank-blue: #00042c;
 $no-bank-black: #000;
 $no-bank-silver: #bbb;
+$no-bank-hovergrey: #f4f4f4;
 
 $no-bank-grayscale-platin: #efefee;
 $no-bank-grayscale-titanium: #e5e4e2;
@@ -39,16 +40,18 @@ $no-bank-grayscale-slate: #322f31;
 $no-bank-secondary-yellow-green: #bdd62f;
 $no-bank-secondary-lemon: #f0f729;
 $no-bank-secondary-turquoise-green: #b4e1b9;
+$no-bank-secondary-lavendel: #d8b0f8;
 
 $enable-negative-margins: true;
 
 $custom-colors: (
   "no-bank-primary": $no-bank-primary,
   "no-bank-highlight": $no-bank-highlight,
+  "no-bank-white": $no-bank-white,
   "no-bank-blue": $no-bank-blue,
   "no-bank-black": $no-bank-black,
   "no-bank-silver": $no-bank-silver,
-  "no-bank-white": $no-bank-white,
+  "no-bank-hovergrey": $no-bank-hovergrey,
   "no-bank-grayscale-platin": $no-bank-grayscale-platin,
   "no-bank-grayscale-titanium": $no-bank-grayscale-titanium,
   "no-bank-grayscale-silver": $no-bank-grayscale-silver,
@@ -57,6 +60,7 @@ $custom-colors: (
   "no-bank-secondary-yellow-green": $no-bank-secondary-yellow-green,
   "no-bank-secondary-lemon": $no-bank-secondary-lemon,
   "no-bank-secondary-turquoise-green": $no-bank-secondary-turquoise-green,
+  "no-bank-secondary-lavendel": $no-bank-secondary-lavendel,
 );
 
 .font-sm {
